k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: manveersyan-group
  labels:
    platform: central-infrastructure
    group: manveersyan-group
