k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ate-operations-service
  namespace: default
  labels:
    app: ate-operations
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
      name: http
  selector:
    app: ate-operations
